account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: banking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service
  template:
    metadata:
      labels:
        app: account-service
    spec:
      containers:
      - name: account-service
        image: gcr.io/cloud-computing-488905/account-service:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: banking-app
spec:
  selector:
    app: account-service
  ports:
  - port: 8081
