eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: banking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
      - name: eureka
        image: gcr.io/cloud-computing-488905/eureka-server:latest
        ports:
        - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: banking-app
spec:
  selector:
    app: eureka
  ports:
    - port: 8761
