fund-transfer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fund-transfer
  namespace: banking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fund-transfer
  template:
    metadata:
      labels:
        app: fund-transfer
    spec:
      containers:
      - name: fund-transfer
        image: gcr.io/cloud-computing-488905/fund-transfer:latest
        ports:
        - containerPort: 8090
---
apiVersion: v1
kind: Service
metadata:
  name: fund-transfer
  namespace: banking-app
spec:
  selector:
    app: fund-transfer
  ports:
  - port: 8090
