sequence-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sequence-generator
  namespace: banking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sequence-generator
  template:
    metadata:
      labels:
        app: sequence-generator
    spec:
      containers:
      - name: sequence-generator
        image: gcr.io/cloud-computing-488905/sequence-generator:latest
        ports:
        - containerPort: 8091
---
apiVersion: v1
kind: Service
metadata:
  name: sequence-generator
  namespace: banking-app
spec:
  selector:
    app: sequence-generator
  ports:
  - port: 8091
