service-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-registry
  namespace: banking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
      - name: service-registry
        image: gcr.io/cloud-computing-488905/service-registry:latest
        ports:
        - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: service-registry
  namespace: banking-app
spec:
  selector:
    app: service-registry
  ports:
  - port: 8761
    targetPort: 8761
