transaction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: banking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
      - name: transaction-service
        image: gcr.io/cloud-computing-488905/transaction-service:latest
        ports:
        - containerPort: 8092
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: banking-app
spec:
  selector:
    app: transaction-service
  ports:
  - port: 8092
