ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: banking-app
spec:
  defaultBackend:
    service:
      name: api-gateway
      port:
        number: 80
